added summary, attrdict attribute styled access

--- a/tutorials/weldxfile.ipynb
+++ b/tutorials/weldxfile.ipynb
@@ -159,9 +159,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e05da309-c713-480a-91ce-81665341011b",
+   "metadata": {},
+   "source": [
+    "### Access to data by attributes\n",
+    "The access by key names can be tedious, when deeply nested dictionaries are involved. We provide a handling via attributes like this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4beab34f-722d-4e21-b531-e49e90c94472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accessible_by_attribute = file.as_attr()\n",
+    "accessible_by_attribute.data_sets.second"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6867d13c-bc9d-46ce-9ce3-ac6dee357e64",
    "metadata": {},
    "source": [
+    "## Writing files to disk\n",
     "In order to make your changes persistent, we are going to save the memory-backed file to disk by invoking `WeldxFile.write_to`."
    ]
   },
@@ -525,7 +546,25 @@
    "source": [
     "Here we see, that a \"signal\" tag is expected, but a \"asdf/core/ndarray-1.0.0\" was received. \n",
     "The ASDF library assignes tags to certain types to handle their storage in the file format. \n",
-    "As shown, the \"signal\" tag is contained in \"weldx/measurement\" container, provided by \"weldx.bam.de\". The tags and schemas"
+    "As shown, the \"signal\" tag is contained in \"weldx/measurement\" container, provided by \"weldx.bam.de\". The tags and schemas also provide a version number, so future updates in the software become managable.\n",
+    "\n",
+    "Custom schemas can be used to define own protocols or standards describing your data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f74567f-d1cd-42a3-8b06-2d7f8f754c29",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "In this tutorial we have encountered how to easily open, inspect, manipulate, and update ASDF files created by WeldX. We've learned that these files can store a variety of different data types and structures.\n",
+    "\n",
+    "Discussed features:\n",
+    " * Opening in read/write mode `WeldxFile(mode=\"rw\")`.\n",
+    " * Creating files in memory (passing no file name to `WeldxFile()` constructor).\n",
+    " * Writing to disk (`WeldxFile.write_to`).\n",
+    " * Keeping log of changes (`WeldxFile.history`, `WeldxFile.add_history_entry`).\n",
+    " * Validation against a schema `WeldxFile(custom_schema=\"/path/my_schema.yaml\")`"
    ]
   }
  ],
