--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -37,17 +37,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\vhirtham\\PycharmProjects\\bam\\weldx\\weldx\\__init__.py:11: UserWarning: Using local weldx package files without version information.\n",
-      "Consider running 'python setup.py --version' or 'pip install -e .' in the weldx root repository\n",
-      "  \"Using local weldx package files without version information.\\n\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import asdf\n",
     "import fs\n",
@@ -56,7 +46,7 @@
     "\n",
     "from weldx.config import Config, QualityStandard\n",
     "from weldx.measurement import  GenericEquipment\n",
-    "from weldx.asdf.utils import notebook_fileprinter"
+    "from weldx.asdf.util import notebook_fileprinter"
    ]
   },
   {
@@ -132,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -142,20 +132,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "`-- resources\n",
-      "    `-- my_organization\n",
-      "        |-- manifests\n",
-      "        |   `-- my_standard-1.0.0.yaml\n",
-      "        `-- schemas\n",
-      "            `-- my_generic_equipment_schema-1.0.0.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mem_fs = fs.open_fs('mem://')\n",
     "mem_fs.makedirs(\"resources/my_organization/manifests\")\n",
@@ -191,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -240,11 +217,11 @@
     "  sources:\n",
     "    type: array\n",
     "    items:\n",
-    "      $ref: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
+    "      tag: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
     "  data_transformations:\n",
     "    type: array\n",
     "    items:\n",
-    "      $ref: \"tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0\"\n",
+    "      tag: \"tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0\"\n",
     "\n",
     "propertyOrder: [name, sources, data_transformations]\n",
     "required: [name]\n",
@@ -269,15 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "nbsphinx": "hidden",
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -300,20 +275,21 @@
     "  sources:\n",
     "    type: array\n",
     "    items:\n",
-    "      $ref: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
+    "      tag: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
     "  data_transformations:\n",
     "    type: array\n",
     "    items:\n",
-    "      $ref: \"tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0\"\n",
+    "      tag: \"tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0\"\n",
     "  wx_metadata:\n",
     "    type: object\n",
     "    properties:\n",
     "      serial_number:\n",
     "        type: number\n",
-    "    required: [serial_number]\n",
+    "  required: [name, wx_metadata]\n",
+    "\n",
     "\n",
     "propertyOrder: [name, sources, data_transformations]\n",
-    "required: [name, wx_metadata]\n",
+    "required: [name]\n",
     "\n",
     "flowStyle: block\n",
     "...\n",
@@ -323,15 +299,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "notebook_fileprinter(schema_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -365,15 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "nbsphinx": "hidden",
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -396,15 +361,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "notebook_fileprinter(manifest_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -459,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -487,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -518,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -548,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -558,18 +514,10 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ups..., got some lengthy validation error...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
-    "   weldx.asdf.utils._write_buffer({\"equipment\":my_equipment})\n",
+    "   weldx.asdf.util.write_buffer({\"equipment\":my_equipment})\n",
     "except asdf.ValidationError:\n",
     "    print(\"Ups..., got some lengthy validation error...\")"
    ]
@@ -590,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -600,20 +548,12 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ups..., got some lengthy validation error...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_equipment.wx_metadata = {\"serial_number\": \"not a number\"}\n",
     "\n",
     "try:\n",
-    "   weldx.asdf.utils._write_buffer({\"equipment\":my_equipment})\n",
+    "   weldx.asdf.util.write_buffer({\"equipment\":my_equipment})\n",
     "except asdf.ValidationError:\n",
     "    print(\"Ups..., got some lengthy validation error...\")"
    ]
@@ -632,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -645,7 +585,7 @@
    "outputs": [],
    "source": [
     "my_equipment.wx_metadata = {\"serial_number\": 1234}\n",
-    "buffer = weldx.asdf.utils._write_buffer({\"equipment\":my_equipment})"
+    "buffer = weldx.asdf.util.write_buffer({\"equipment\":my_equipment})"
    ]
   },
   {
@@ -662,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -672,115 +612,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">pre { line-height: 125%; margin: 0; }\n",
-       "td.linenos pre { color: #000000; background-color: #f0f0f0; padding-left: 5px; padding-right: 5px; }\n",
-       "span.linenos { color: #000000; background-color: #f0f0f0; padding-left: 5px; padding-right: 5px; }\n",
-       "td.linenos pre.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }\n",
-       "span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }\n",
-       ".highlight .hll { background-color: #ffffcc }\n",
-       ".highlight { background: #f8f8f8; }\n",
-       ".highlight .c { color: #408080; font-style: italic } /* Comment */\n",
-       ".highlight .err { border: 1px solid #FF0000 } /* Error */\n",
-       ".highlight .k { color: #008000; font-weight: bold } /* Keyword */\n",
-       ".highlight .o { color: #666666 } /* Operator */\n",
-       ".highlight .ch { color: #408080; font-style: italic } /* Comment.Hashbang */\n",
-       ".highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */\n",
-       ".highlight .cp { color: #BC7A00 } /* Comment.Preproc */\n",
-       ".highlight .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */\n",
-       ".highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */\n",
-       ".highlight .cs { color: #408080; font-style: italic } /* Comment.Special */\n",
-       ".highlight .gd { color: #A00000 } /* Generic.Deleted */\n",
-       ".highlight .ge { font-style: italic } /* Generic.Emph */\n",
-       ".highlight .gr { color: #FF0000 } /* Generic.Error */\n",
-       ".highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */\n",
-       ".highlight .gi { color: #00A000 } /* Generic.Inserted */\n",
-       ".highlight .go { color: #888888 } /* Generic.Output */\n",
-       ".highlight .gp { color: #000080; font-weight: bold } /* Generic.Prompt */\n",
-       ".highlight .gs { font-weight: bold } /* Generic.Strong */\n",
-       ".highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */\n",
-       ".highlight .gt { color: #0044DD } /* Generic.Traceback */\n",
-       ".highlight .kc { color: #008000; font-weight: bold } /* Keyword.Constant */\n",
-       ".highlight .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */\n",
-       ".highlight .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */\n",
-       ".highlight .kp { color: #008000 } /* Keyword.Pseudo */\n",
-       ".highlight .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */\n",
-       ".highlight .kt { color: #B00040 } /* Keyword.Type */\n",
-       ".highlight .m { color: #666666 } /* Literal.Number */\n",
-       ".highlight .s { color: #BA2121 } /* Literal.String */\n",
-       ".highlight .na { color: #7D9029 } /* Name.Attribute */\n",
-       ".highlight .nb { color: #008000 } /* Name.Builtin */\n",
-       ".highlight .nc { color: #0000FF; font-weight: bold } /* Name.Class */\n",
-       ".highlight .no { color: #880000 } /* Name.Constant */\n",
-       ".highlight .nd { color: #AA22FF } /* Name.Decorator */\n",
-       ".highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */\n",
-       ".highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */\n",
-       ".highlight .nf { color: #0000FF } /* Name.Function */\n",
-       ".highlight .nl { color: #A0A000 } /* Name.Label */\n",
-       ".highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */\n",
-       ".highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */\n",
-       ".highlight .nv { color: #19177C } /* Name.Variable */\n",
-       ".highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */\n",
-       ".highlight .w { color: #bbbbbb } /* Text.Whitespace */\n",
-       ".highlight .mb { color: #666666 } /* Literal.Number.Bin */\n",
-       ".highlight .mf { color: #666666 } /* Literal.Number.Float */\n",
-       ".highlight .mh { color: #666666 } /* Literal.Number.Hex */\n",
-       ".highlight .mi { color: #666666 } /* Literal.Number.Integer */\n",
-       ".highlight .mo { color: #666666 } /* Literal.Number.Oct */\n",
-       ".highlight .sa { color: #BA2121 } /* Literal.String.Affix */\n",
-       ".highlight .sb { color: #BA2121 } /* Literal.String.Backtick */\n",
-       ".highlight .sc { color: #BA2121 } /* Literal.String.Char */\n",
-       ".highlight .dl { color: #BA2121 } /* Literal.String.Delimiter */\n",
-       ".highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */\n",
-       ".highlight .s2 { color: #BA2121 } /* Literal.String.Double */\n",
-       ".highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */\n",
-       ".highlight .sh { color: #BA2121 } /* Literal.String.Heredoc */\n",
-       ".highlight .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */\n",
-       ".highlight .sx { color: #008000 } /* Literal.String.Other */\n",
-       ".highlight .sr { color: #BB6688 } /* Literal.String.Regex */\n",
-       ".highlight .s1 { color: #BA2121 } /* Literal.String.Single */\n",
-       ".highlight .ss { color: #19177C } /* Literal.String.Symbol */\n",
-       ".highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */\n",
-       ".highlight .fm { color: #0000FF } /* Name.Function.Magic */\n",
-       ".highlight .vc { color: #19177C } /* Name.Variable.Class */\n",
-       ".highlight .vg { color: #19177C } /* Name.Variable.Global */\n",
-       ".highlight .vi { color: #19177C } /* Name.Variable.Instance */\n",
-       ".highlight .vm { color: #19177C } /* Name.Variable.Magic */\n",
-       ".highlight .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span><span class=\"c1\">#ASDF 1.0.0</span>\n",
-       "<span class=\"c1\">#ASDF_STANDARD 1.5.0</span>\n",
-       "<span class=\"nt\">%YAML</span> <span class=\"m\">1.1</span>\n",
-       "<span class=\"nt\">%TAG</span> <span class=\"kt\">!</span> <span class=\"kt\">tag:stsci.edu:asdf/</span>\n",
-       "<span class=\"nn\">---</span> <span class=\"kt\">!core/asdf-1.1.0</span>\n",
-       "<span class=\"nt\">asdf_library</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">author</span><span class=\"p\">:</span> <span class=\"nv\">The ASDF Developers</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> homepage</span><span class=\"p\">:</span> <span class=\"s\">&#39;http://github.com/asdf-format/asdf&#39;</span><span class=\"p p-Indicator\">,</span>\n",
-       "<span class=\"nt\">  name</span><span class=\"p\">:</span> <span class=\"nv\">asdf</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">2.8.0.dev107+g8ccee8b</span><span class=\"p p-Indicator\">}</span>\n",
-       "<span class=\"nt\">history</span><span class=\"p\">:</span>\n",
-       "  <span class=\"nt\">extensions</span><span class=\"p\">:</span>\n",
-       "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
-       "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">asdf.extension.BuiltinExtension</span>\n",
-       "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"nv\">asdf</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">2.8.0.dev107+g8ccee8b</span><span class=\"p p-Indicator\">}</span>\n",
-       "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
-       "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">weldx.asdf.extension.WeldxExtension</span>\n",
-       "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"nv\">weldx</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">0.2.0+30.gabb76c1.dirty</span><span class=\"p p-Indicator\">}</span>\n",
-       "<span class=\"nt\">equipment</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0&gt;</span>\n",
-       "  <span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">my_equipment</span>\n",
-       "  <span class=\"nt\">sources</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">[]</span>\n",
-       "  <span class=\"nt\">data_transformations</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">[]</span>\n",
-       "  <span class=\"nt\">wx_metadata</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">serial_number</span><span class=\"p\">:</span> <span class=\"nv\">1234</span><span class=\"p p-Indicator\">}</span>\n",
-       "<span class=\"nn\">...</span>\n",
-       "</pre></div>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "notebook_fileprinter(buffer)"
    ]
@@ -815,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
