--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -230,7 +230,7 @@
     "...\n",
     "~~~\n",
     "\n",
-    "We achieve our goal by simply adding `wx_matadata` to the following additional property:\n",
+    "We achieve our goal by simply adding the following additional property:\n",
     "\n",
     "~~~ yaml\n",
     "wx_metadata:\n",
@@ -241,7 +241,7 @@
     "  required: [serial_number]\n",
     "~~~\n",
     "\n",
-    "The new file content looks like this:"
+    "Additionally, we add `wx_matadata` to the required fields. The new file content looks like this:"
    ]
   },
   {
@@ -285,11 +285,11 @@
     "    properties:\n",
     "      serial_number:\n",
     "        type: number\n",
-    "  required: [name, wx_metadata]\n",
+    "  required: [serial_number]\n",
     "\n",
     "\n",
     "propertyOrder: [name, sources, data_transformations]\n",
-    "required: [name]\n",
+    "required: [name, wx_metadata]\n",
     "\n",
     "flowStyle: block\n",
     "...\n",
