Update tutorial using the WeldxFile class

--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -42,11 +42,10 @@
     "import asdf\n",
     "import fs\n",
     "import yaml\n",
-    "import weldx\n",
     "\n",
+    "from weldx.asdf.file import WeldxFile\n",
     "from weldx.config import Config, QualityStandard\n",
-    "from weldx.measurement import  GenericEquipment\n",
-    "from weldx.asdf.util import notebook_fileprinter"
+    "from weldx.measurement import  GenericEquipment"
    ]
   },
   {
@@ -517,7 +516,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "   weldx.asdf.util.write_buffer({\"equipment\":my_equipment})\n",
+    "   WeldxFile(tree={\"equipment\":my_equipment}, mode=\"rw\")\n",
     "except asdf.ValidationError:\n",
     "    print(\"Ups..., got some lengthy validation error...\")"
    ]
@@ -553,7 +552,7 @@
     "my_equipment.wx_metadata = {\"serial_number\": \"not a number\"}\n",
     "\n",
     "try:\n",
-    "   weldx.asdf.util.write_buffer({\"equipment\":my_equipment})\n",
+    "   WeldxFile(tree={\"equipment\":my_equipment}, mode=\"rw\")\n",
     "except asdf.ValidationError:\n",
     "    print(\"Ups..., got some lengthy validation error...\")"
    ]
@@ -585,7 +584,7 @@
    "outputs": [],
    "source": [
     "my_equipment.wx_metadata = {\"serial_number\": 1234}\n",
-    "buffer = weldx.asdf.util.write_buffer({\"equipment\":my_equipment})"
+    "file = WeldxFile(tree={\"equipment\":my_equipment}, mode=\"rw\")"
    ]
   },
   {
@@ -614,7 +613,7 @@
    },
    "outputs": [],
    "source": [
-    "notebook_fileprinter(buffer)"
+    "file.show_asdf_header()"
    ]
   },
   {
