Fix some CI issues

--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -44,7 +44,7 @@
     "import yaml\n",
     "\n",
     "from weldx.asdf.file import WeldxFile\n",
-    "from weldx.config import Config, QualityStandard\n",
+    "from weldx.config import add_quality_standard, enable_quality_standard, QualityStandard\n",
     "from weldx.measurement import  GenericEquipment"
    ]
   },
@@ -99,9 +99,9 @@
     "If you want to use the standard, you have to activate it first:\n",
     "\n",
     "~~~ python\n",
-    "from weldx.config import Config\n",
+    "from weldx.config import enable_quality_standard\n",
     "\n",
-    "Config.enable_quality_standard(NAME_OF_THE_STANDARD, VERSION_OF_THE_STANDARD)\n",
+    "enable_quality_standard(NAME_OF_THE_STANDARD, VERSION_OF_THE_STANDARD)\n",
     "~~~\n",
     "\n",
     "The version number is optional.\n",
