--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -454,7 +454,7 @@
    },
    "outputs": [],
    "source": [
-    "Config._add_quality_standard(qs)"
+    "add_quality_standard(qs)"
    ]
   },
   {
@@ -485,7 +485,7 @@
    },
    "outputs": [],
    "source": [
-    "Config.enable_quality_standard(\"my_standard\")\n"
+    "enable_quality_standard(\"my_standard\")\n"
    ]
   },
   {
