--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -17,18 +17,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "nbsphinx": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "# if the package is not installed in your python environment, run this to execute the notebook directly from inside the GitHub repository\n",
-    "%cd -q .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -43,8 +31,8 @@
     "import fs\n",
     "import yaml\n",
     "\n",
-    "from weldx.asdf.file import WeldxFile\n",
-    "from weldx.config import add_quality_standard, enable_quality_standard, QualityStandard\n",
+    "from weldx import WeldxFile\n",
+    "from weldx.config import QualityStandard\n",
     "from weldx.measurement import  GenericEquipment"
    ]
   },
@@ -77,8 +65,6 @@
     "Furthermore, an overview of all pre-defined schema files can be found on the [Standards](../standard.rst) page of this\n",
     "documentation.\n",
     "\n",
-    "> todo: fix link\n",
-    "\n",
     "## Installing and using quality standards\n",
     "\n",
     "The WelDX API comes with a default schema for every object.\n",
@@ -106,7 +92,7 @@
     "\n",
     "The version number is optional.\n",
     "If you don't provide one, the latest available version will be used.\n",
-    "And that's all there is to know about using standards.\n",
+    "That's all there is to know about using standards.\n",
     "\n",
     "## Creating custom standards\n",
     "\n",
@@ -194,8 +180,8 @@
     "To do so, we just need to assigns a python dictionary to the reserved member variable `wx_metadata` (TODO: Add tutorial link).\n",
     "The content of the meta data is not restricted in any way by the default WelDX standard and purely optional.\n",
     "We want to change this now with our custom standard so that there must be a meta data attached to the object that\n",
-    "contains an integer that represents the serial number of the equipment.\n",
-    "To do so, we start with the default schema used by WelDX which looks like this:\n",
+    "contains an integer representing the serial number of the equipment.\n",
+    "Our starting point is the default schema used by WelDX which looks like this:\n",
     "\n",
     "~~~ yaml\n",
     "%YAML 1.1\n",
@@ -240,7 +226,8 @@
     "  required: [serial_number]\n",
     "~~~\n",
     "\n",
-    "Additionally, we add `wx_matadata` to the required fields. The new file content looks like this:"
+    "Additionally, we add `wx_matadata` to the required fields. \n",
+    "The new schema looks like this:"
    ]
   },
   {
@@ -293,6 +280,13 @@
     "flowStyle: block\n",
     "...\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We save the code is the file `my_generic_equipment_schema-1.0.0.yaml`:"
    ]
   },
   {
@@ -399,16 +393,17 @@
     "So in our case we use `file: \"my_generic_equipment_schema-1.0.0`\n",
     "\n",
     "\n",
-    "Now all that remains is to register our new standard to WelDX and activate it.\n",
-    "Since we didn't install it, we need to do the registration manually using the 'Config.add_quality_standard' method.\n",
+    "All that remains is to register our new standard to WelDX and activate it.\n",
+    "Since we didn't install it, we need to do the registration manually using the 'add_quality_standard' method.\n",
     "To do so, we create an instance of the `QualityStandard` class.\n",
     "This class needs to know where the root directory of your standard is located (the directory that contains the\n",
     "`manifests` and `schemas` directories).\n",
     "You can either provide the location as a string or a Python `Path` object:\n",
     "\n",
     "> Note that you can also provide a filesystem from the PyFilesystem package, which we will do here since we used a\n",
-    "> virtual file system in this tutorial, but this isn't the default approach you should choose unless you know what you\n",
-    "> are doing. So ignore the `mem_fs.opendir` part in the next command and treat it as if we provided a normal path.\n",
+    "> virtual file system in this tutorial. \n",
+    "> But this isn't the default approach you should choose unless you know what you are doing. \n",
+    "> So ignore the `mem_fs.opendir` part in the next command and treat it as if we provided a normal path.\n",
     "\n"
    ]
   },
@@ -454,6 +449,7 @@
    },
    "outputs": [],
    "source": [
+    "from weldx.config import add_quality_standard\n",
     "add_quality_standard(qs)"
    ]
   },
@@ -466,7 +462,7 @@
    },
    "source": [
     "At this point there isn't any difference to an installed standard anymore.\n",
-    "WelDX now knows about your standard and where to find the corresponding resources.\n",
+    "WelDX now knows about your standard and where to find its resources.\n",
     "We can activate it by using the same name we used for our manifest files.\n",
     "Since there is only one version, we can omit the version number:\n"
    ]
@@ -485,7 +481,8 @@
    },
    "outputs": [],
    "source": [
-    "enable_quality_standard(\"my_standard\")\n"
+    "from weldx.config import enable_quality_standard\n",
+    "enable_quality_standard(\"my_standard\")"
    ]
   },
   {
@@ -497,8 +494,7 @@
    },
    "source": [
     "So let's try to store our `GenericEquipment` we created earlier.\n",
-    "We will use `weldx.asdf.utils._write_buffer` utility function for this, which writes an ASDF file to a buffer instead to\n",
-    "the hard drive:\n"
+    "We will use the `WeldxFile` ([click here to get to the tutorial](weldxfile.ipynb)) class to save our ASDF file into a buffer and not to the hard drive:"
    ]
   },
   {
@@ -532,7 +528,7 @@
     "As you can see, we get an `ValidationError`.\n",
     "The reason is that our new standard requires from our `GenericEquipment` that it has some meta data attached to it and\n",
     "we didn't do that.\n",
-    "We will attach a serial_number as meta data and try it again:"
+    "Let's attach a serial_number as meta data and try it again:"
    ]
   },
   {
@@ -554,7 +550,7 @@
     "try:\n",
     "   WeldxFile(tree={\"equipment\":my_equipment}, mode=\"rw\")\n",
     "except asdf.ValidationError:\n",
-    "    print(\"Ups..., got some lengthy validation error...\")"
+    "    print(\"Still getting a validation error...\")"
    ]
   },
   {
