--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "current_AD_transform = msm.SignalTransformation(\n",
-    "    name=\"AD conversion current measurement\",\n",
+    "    name=\"AD current\",\n",
     "    func=current_AD_func,\n",
     "    type_transformation=\"AD\",\n",
     "    error=msm.Error(Q_(0.01, \"percent\")),\n",
@@ -299,7 +299,7 @@
    "outputs": [],
    "source": [
     "current_calib_transform = msm.SignalTransformation(\n",
-    "     name=\"Calibration current measurement\",\n",
+    "     name=\"calibration current\",\n",
     "     error=msm.Error(0.0),\n",
     "     func=current_calib_func,\n",
     "     meta=twincat_scope,\n",
@@ -381,7 +381,7 @@
     ")\n",
     "\n",
     "voltage_AD_transform = msm.SignalTransformation(\n",
-    "     name=\"AD conversion voltage measurement\",\n",
+    "     name=\"AD voltage\",\n",
     "     error=msm.Error(Q_(0.01, \"percent\")),\n",
     "     func=voltage_ad_func,\n",
     "     type_transformation=\"AD\",\n",
@@ -391,7 +391,7 @@
     "\n",
     "welding_voltage_chain.add_transformation_from_equipment(\n",
     "    equipment=BH_ELM,\n",
-    "    transformation_name=\"AD conversion voltage measurement\"\n",
+    "    transformation_name=\"AD voltage\"\n",
     ")\n",
     "\n",
     "\n",
@@ -403,7 +403,7 @@
     ")\n",
     "\n",
     "voltage_calib_transform = msm.SignalTransformation(\n",
-    "     name=\"Calibration voltage measurement\",\n",
+    "     name=\"calibration voltage\",\n",
     "     error=msm.Error(0.0),\n",
     "     func=voltage_calib_func,\n",
     "     meta=twincat_scope,\n",
@@ -425,7 +425,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "source": [
     "## Coordinate Systems\n",
     "\n",
@@ -435,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "lcs_specimen_in_root = tf.LocalCoordinateSystem(\n",
@@ -457,7 +461,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "source": [
     "> **TODO:** Connect data to coordinate systems"
    ]
@@ -530,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
