--- a/tutorials/custom_metadata.ipynb
+++ b/tutorials/custom_metadata.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by creating the sensor object as a `GenericEquipment`:"
+    "We start by creating the sensor object as a `MeasurementEquipment`:"
    ]
   },
   {
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.measurement import GenericEquipment\n",
+    "from weldx.measurement import MeasurementEquipment\n",
     "\n",
-    "HKS_sensor = GenericEquipment(name=\"HKS P1000-S3\")"
+    "HKS_sensor = MeasurementEquipment(name=\"HKS P1000-S3\")"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
