update markdown formatting in weldxfile.ipynb

--- a/tutorials/weldxfile.ipynb
+++ b/tutorials/weldxfile.ipynb
@@ -398,6 +398,7 @@
    "metadata": {},
    "source": [
     "This schema defines a complete experimental setup with measurement data, e.g requires the following attributes to be defined in our tree:\n",
+    "\n",
     "  - workpiece\n",
     "  - TCP\n",
     "  - welding_current\n",
@@ -493,9 +494,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see, that a \"signal\" tag is expected, but a \"asdf/core/ndarray-1.0.0\" was received. \n",
+    "Here we see, that a `signal` tag is expected, but a `asdf/core/ndarray-1.0.0` was received. \n",
     "The ASDF library assignes tags to certain types to handle their storage in the file format. \n",
-    "As shown, the \"signal\" tag is contained in \"weldx/measurement\" container, provided by \"weldx.bam.de\". The tags and schemas also provide a version number, so future updates in the software become managable.\n",
+    "As shown, the `signal` tag is contained in `weldx/measurement` container, provided by `weldx.bam.de`. The tags and schemas also provide a version number, so future updates in the software become managable.\n",
     "\n",
     "Custom schemas can be used to define own protocols or standards describing your data."
    ]
@@ -508,6 +509,7 @@
     "In this tutorial we have encountered how to easily open, inspect, manipulate, and update ASDF files created by WelDX. We've learned that these files can store a variety of different data types and structures.\n",
     "\n",
     "Discussed features:\n",
+    "\n",
     " * Opening in read/write mode `WeldxFile(mode=\"rw\")`.\n",
     " * Creating files in memory (passing no file name to `WeldxFile()` constructor).\n",
     " * Writing to disk (`WeldxFile.write_to`).\n",
