--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -39,6 +39,7 @@
    "outputs": [],
    "source": [
     "def plot_ts(ts):\n",
+    "    ts = ts.data_array\n",
     "    fig, ax = plt.subplots(1,1)\n",
     "    x = ts.time.data.astype('timedelta64[ms]').astype(int)/1000.0\n",
     "    plt.plot(x,ts.data.magnitude,'-o')\n",
@@ -397,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
