Replace GenericEquipment with MeasurementEquipment

--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "from weldx import WeldxFile\n",
     "from weldx.config import QualityStandard\n",
-    "from weldx.measurement import  GenericEquipment"
+    "from weldx.measurement import  MeasurementEquipment"
    ]
   },
   {
@@ -101,7 +101,7 @@
     "confusing at the beginning.\n",
     "Instead we will just focus on the files and their content.\n",
     "\n",
-    "Let's say we want to set a new quality standard for the `GenericEquipment`.\n",
+    "Let's say we want to set a new quality standard for the `MeasurementEquipment`.\n",
     "In our short example, we will use the following file structure:"
    ]
   },
@@ -125,7 +125,7 @@
     "mem_fs.listdir(\"\")\n",
     "\n",
     "mem_fs.create(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\")\n",
-    "mem_fs.create(\"resources/my_organization/schemas/my_generic_equipment_schema-1.0.0.yaml\")\n",
+    "mem_fs.create(\"resources/my_organization/schemas/my_measurement_equipment_schema-1.0.0.yaml\")\n",
     "mem_fs.tree()"
    ]
   },
@@ -147,7 +147,7 @@
     "end.\n",
     "Here we will only use a single manifest file called `my_standard-1.0.0.yaml`.\n",
     "\n",
-    "Now before we start looking into the different files, let's create an instance of the `GenericEquipment` class that we\n",
+    "Now before we start looking into the different files, let's create an instance of the `MeasurementEquipment` class that we\n",
     "want to serialize using a new quality standard:"
    ]
   },
@@ -165,7 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "my_equipment = GenericEquipment(\"my_equipment\")"
+    "my_equipment = MeasurementEquipment(\"my_equipment\")"
    ]
   },
   {
@@ -187,14 +187,15 @@
     "%YAML 1.1\n",
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
-    "id: \"http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0\"\n",
-    "tag: \"tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0\"\n",
+    "id: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "tag: \"tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0\"\n",
     "\n",
     "title: |\n",
-    "  A generic piece of equipment.\n",
+    "  A piece of measurement equipment.\n",
     "description: |\n",
-    "  Generic placeholder class do describe any kind of equipment with additional metadata.\n",
+    "  This schema describes a piece of measurement equipment that is part of a measurement chain.\n",
     "  Equipments can be associated with signal sources and data transformations.\n",
+    "\n",
     "type: object\n",
     "properties:\n",
     "  name:\n",
@@ -203,12 +204,12 @@
     "    type: array\n",
     "    items:\n",
     "      tag: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
-    "  data_transformations:\n",
+    "  transformations:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0\"\n",
+    "      tag: \"tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0\"\n",
     "\n",
-    "propertyOrder: [name, sources, data_transformations]\n",
+    "propertyOrder: [name, sources, transformations]\n",
     "required: [name]\n",
     "\n",
     "flowStyle: block\n",
@@ -246,14 +247,15 @@
     "%YAML 1.1\n",
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
-    "id: \"http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0\"\n",
-    "tag: \"tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0\"\n",
+    "id: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "tag: \"tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0\"\n",
     "\n",
     "title: |\n",
-    "  A generic piece of equipment.\n",
+    "  A piece of measurement equipment.\n",
     "description: |\n",
-    "  Generic placeholder class do describe any kind of equipment with additional metadata.\n",
+    "  This schema describes a piece of measurement equipment that is part of a measurement chain.\n",
     "  Equipments can be associated with signal sources and data transformations.\n",
+    "\n",
     "type: object\n",
     "properties:\n",
     "  name:\n",
@@ -262,19 +264,19 @@
     "    type: array\n",
     "    items:\n",
     "      tag: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
-    "  data_transformations:\n",
+    "  transformations:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0\"\n",
+    "      tag: \"tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0\"\n",
     "  wx_metadata:\n",
     "    type: object\n",
     "    properties:\n",
     "      serial_number:\n",
     "        type: number\n",
-    "  required: [serial_number]\n",
+    "    required: [serial_number]\n",
     "\n",
     "\n",
-    "propertyOrder: [name, sources, data_transformations]\n",
+    "propertyOrder: [name, sources, transformations]\n",
     "required: [name, wx_metadata]\n",
     "\n",
     "flowStyle: block\n",
@@ -286,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We save the code is the file `my_generic_equipment_schema-1.0.0.yaml`:"
+    "We save the code is the file `my_measurement_equipment_schema-1.0.0.yaml`:"
    ]
   },
   {
@@ -304,7 +306,7 @@
    "outputs": [],
    "source": [
     "# write to the file\n",
-    "with mem_fs.open(\"resources/my_organization/schemas/my_generic_equipment_schema-1.0.0.yaml\", \"w\") as file:\n",
+    "with mem_fs.open(\"resources/my_organization/schemas/my_measurement_equipment_schema-1.0.0.yaml\", \"w\") as file:\n",
     "    file.write(schema_file)"
    ]
   },
@@ -341,13 +343,13 @@
     "extension_uri: http://my_organization/standards/my_standard-1.0.0\n",
     "title: My own standard\n",
     "description: |-\n",
-    "  A new and stricter standard for generic equipment.\n",
+    "  A new and stricter standard for measurement equipment.\n",
     "asdf_standard_requirement: 1.0.0\n",
     "\n",
     "# mappings\n",
     "tags:\n",
-    "- uri: \"http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0\"\n",
-    "  file: \"my_generic_equipment_schema-1.0.0\"\n",
+    "- uri: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "  file: \"my_measurement_equipment_schema-1.0.0\"\n",
     "\"\"\""
    ]
   },
@@ -387,10 +389,10 @@
     "If you are not sure about the exact URI just have a look into the original schema of the object.\n",
     "You can find all schemas [here](../standard.rst).\n",
     "In our example we want to replace the schema for the URI\n",
-    "`http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0`.\n",
+    "`http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0`.\n",
     "Additionally, each item of the YAML list needs a `file` property which specifies the relative file path of the new\n",
     "schema inside the `schemas` directory, omitting the file extension.\n",
-    "So in our case we use `file: \"my_generic_equipment_schema-1.0.0`\n",
+    "So in our case we use `file: \"my_measurement_equipment_schema-1.0.0`\n",
     "\n",
     "\n",
     "All that remains is to register our new standard to WelDX and activate it.\n",
@@ -493,7 +495,7 @@
     }
    },
    "source": [
-    "So let's try to store our `GenericEquipment` we created earlier.\n",
+    "So let's try to store our `MeasurementEquipment` we created earlier.\n",
     "We will use the `WeldxFile` ([click here to get to the tutorial](weldxfile.ipynb)) class to save our ASDF file into a buffer and not to the hard drive:"
    ]
   },
@@ -526,7 +528,7 @@
    },
    "source": [
     "As you can see, we get an `ValidationError`.\n",
-    "The reason is that our new standard requires from our `GenericEquipment` that it has some meta data attached to it and\n",
+    "The reason is that our new standard requires from our `MeasurementEquipment` that it has some meta data attached to it and\n",
     "we didn't do that.\n",
     "Let's attach a serial_number as meta data and try it again:"
    ]
