--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -72,7 +72,7 @@
     "However, the standards we defined might not suit your needs.\n",
     "Therefore, the WelDX API offers a mechanism to override an arbitrary number of default schemas.\n",
     "Before we discuss, how a custom standard can be generated, let's assume that you have found and downloaded one.\n",
-    "Each quality standard that was created following the guidelines (Todo: Link) can be installed using pythons package\n",
+    "Each quality standard that was created following [the guidelines](https://github.com/BAMWelDX/quality-standard-template) can be installed using pythons package\n",
     "manager `pip`.\n",
     "So the first step would be to install the standard as a python package:\n",
     "\n",
@@ -109,13 +109,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -176,8 +173,8 @@
     }
    },
    "source": [
-    "Every WelDX type gives you the option to add arbitrary meta data to it that will also be stored in an ASDF file.\n",
-    "To do so, we just need to assigns a python dictionary to the reserved member variable `wx_metadata` (TODO: Add tutorial link).\n",
+    "Every WelDX type gives you the option to add arbitrary meta data ([open tutorial](custom_metadata.ipynb)) to it that will also be stored in an ASDF file.\n",
+    "To do so, we just need to assigns a python dictionary to the reserved member variable `wx_metadata`.\n",
     "The content of the meta data is not restricted in any way by the default WelDX standard and purely optional.\n",
     "We want to change this now with our custom standard so that there must be a meta data attached to the object that\n",
     "contains an integer representing the serial number of the equipment.\n",
@@ -288,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We save the code is the file `my_measurement_equipment_schema-1.0.0.yaml`:"
+    "We save the code in the file `my_measurement_equipment_schema-1.0.0.yaml`:"
    ]
   },
   {
@@ -380,10 +377,10 @@
     }
    },
    "source": [
-    "> TODO: Discuss which data must be provided in a manifest file and adjust this tutorial accordingly\n",
+    "The header section should be rather self explanatory.\n",
+    "Its id is the manifest file's filepath relative to the `resource` directory with a preceeding `http://`.\n",
+    "The composition of the extension uri is quite similar except that `manifests` gets replaced by `standards`.\n",
     "\n",
-    "The header section should be rather self explanatory (TODO: except for the uri and id stuff) and all of its fields can\n",
-    "get values to your liking.\n",
     "The mapping section is a YAML list with the name `tags`.\n",
     "Each of its items need a `uri` field that specifies the URI of the object that should get a new schema assigned to it.\n",
     "If you are not sure about the exact URI just have a look into the original schema of the object.\n",
@@ -496,7 +493,7 @@
    },
    "source": [
     "So let's try to store our `MeasurementEquipment` we created earlier.\n",
-    "We will use the `WeldxFile` ([click here to get to the tutorial](weldxfile.ipynb)) class to save our ASDF file into a buffer and not to the hard drive:"
+    "We will use the `WeldxFile` class ([click here to get to the tutorial](weldxfile.ipynb)) to save our ASDF file into a buffer and not to the hard drive:"
    ]
   },
   {
@@ -624,7 +621,7 @@
    "source": [
     "## Make your standard installable\n",
     "\n",
-    "Coming soon ..."
+    "If you like to create your own installable quality standard, follow the instructions of this [template repository on GitHub](https://github.com/BAMWelDX/quality-standard-template)."
    ]
   }
  ],
